fixed h3 headers not showing in the correct places
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/membership@5183 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/membershipincludes/css/levels.css
+++ b/membershipincludes/css/levels.css
@@ -120,6 +120,18 @@ div.level-details select {
 	display: none;
 }
 
+.level-holder h3.activecontent {
+	display: block;
+}
+
+.level-holder h3.inactivecontent {
+	display: none;
+}
+
+.level-holder div.advancedcontent.activecontent h3 {
+	display: block;
+}
+
 #edit-level div.level-holder div.advancedtabwarning.inactivecontent {
 	background-color: #fffbcc;
 	border: 1px solid #e6db55;
